<resources>
    <string name="app_name">3D Model Viewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">3D Model Viewer</string>
    <string name="nav_header_subtitle">support@the3deer.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_load">Load</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_recent_models">Recent Models</string>

    <string name="dialog_load_title">Menu</string>
    <string name="dialog_load_in_progress_message">Loading…</string>

    <!-- Storage & Cache -->
    <string name="preference_manage_storage_title" translatable="false">Manage App Storage &amp; Cache</string>
    <string name="preference_manage_storage_summary" translatable="false">Open Android System Settings to view storage usage or clear cache</string>

    <!-- Providers -->
    <string name="provider_assets" translatable="false">Samples</string>
    <string name="provider_the3deer" translatable="false">Repository (the3deer)</string>
    <string name="provider_khronos" translatable="false">Repository (Khronos)</string>
    <string name="provider_open_source_3d_assets" translatable="false">Repository (Open Source 3D Assets)</string>
    <string name="provider_polyhaven" translatable="false">Repository (Poly Haven)</string>
    <string name="provider_android_explorer" translatable="false">Android Explorer</string>
    <string name="provider_sdcard" translatable="false">File Explorer</string>

    <string name="white">White</string>
    <string name="gray">Gray</string>
    <string name="black">Black</string>
    <string name="ok">OK</string>
    <string name="enabled">Enabled</string>

    <!-- New Version / Rename Notification -->
    <string name="dialog_new_version_title">New Version Available</string>
    <string name="dialog_new_version_message">We have moved! This app is now \"<b>%1$s</b>\". Please download the latest version from the Google Play Store to continue receiving updates.</string>
    <string name="dialog_new_version_button">Go to Play Store</string>
    <string name="dialog_new_version_later">Later</string>

    <!-- About Screen -->
    <string name="about_title_app">3D Model Viewer</string>
    <string name="about_version">Version 1.0.0</string>
    <string name="about_intro">An open-source 3D rendering engine for Android using OpenGL ES.</string>

    <string name="about_header_formats">Supported Formats</string>
    <string name="about_formats_list">OBJ, STL, DAE, GLTF, GLB, and FBX.</string>
    <string name="about_formats_note">Note: For models with external textures, please load them as a single .zip file.</string>

    <string name="about_header_controls">How to Use</string>
    <string name="about_controls_orbit">• <b>Orbit:</b> Drag with one finger</string>
    <string name="about_controls_pan">• <b>Pan:</b> Drag with two fingers</string>
    <string name="about_controls_zoom">• <b>Zoom:</b> Pinch with two fingers</string>

    <string name="about_header_links">Project Links</string>
    <string name="about_link_website_label">Website</string>
    <string name="about_link_website_url">https://www.the3deer.org</string>
    <string name="about_link_source_label">Source Code (GitHub)</string>
    <string name="about_link_source_url">https://github.com/the3deer/android-3d-model-viewer</string>
    <string name="about_link_issues_label">Report an Issue</string>
    <string name="about_link_issues_url">https://github.com/the3deer/android-3d-model-viewer/issues</string>
    <string name="about_github_desc" translatable="false">GitHub Octocat Icon</string>

    <string name="about_warning_experimental">⚠ Warning: This engine is experimental. Some file features might not render perfectly.</string>

    <string name="about_header_privacy">Privacy</string>
    <string name="about_privacy_text">This application does not collect or share any personal information.</string>

    <string name="scenes">Scenes</string>
    <string name="cameras">Cameras</string>
    <string name="animations">Animations</string>
    <string name="scene">Scene</string>
    <string name="camera">Camera</string>
    <string name="immersive">Immersive</string>
    <string name="anim">Anim</string>

    <string name="tooltip_no_scenes">This model has only one scene</string>
    <string name="tooltip_no_cameras">This model has only one camera</string>
    <string name="tooltip_no_animations">This model has no animations</string>

    <string name="fps_label" translatable="false">%1$d FPS</string>

    <!-- Categories -->
    <string name="category_render_label">Render</string>
    <string name="category_render_description">Scene rendering settings</string>
    <string name="category_gui_label">User Interface</string>
    <string name="category_gui_description">On-screen displays and navigation controls</string>
    <string name="category_general_label">General</string>
    <string name="category_general_description">Global application preferences</string>
    <string name="category_decorators_label">Decorators</string>
    <string name="category_decorators_description">Visual helpers</string>
    <string name="category_debug_label">Debug</string>
    <string name="category_debug_description">Troubleshooting and diagnostic tools</string>
    <string name="category_opengl_label">Graphics API</string>
    <string name="category_opengl_description">OpenGL ES configuration</string>

    <!-- Beans -->
    <string name="bean_settings_label">General Settings</string>
    <string name="bean_gl_renderer_label">OpenGL Settings</string>
    <string name="bean_gl_renderer_description">Configuration of the rendering engine</string>
    <string name="bean_font_manager_label">Font Manager</string>
    <string name="bean_font_manager_description">Text rendering options</string>
    <string name="bean_animation_controller_label">Animation Controller</string>
    <string name="bean_collision_drawer_label">Collision Points Drawer</string>
    <string name="bean_collision_drawer_description">Draw points where the ray-object collisions take place</string>
    <string name="bean_bounding_box_drawer_label">Bounding Box Drawer</string>
    <string name="bean_bounding_box_drawer_description">Draws the bounding box of the selected object</string>
    <string name="bean_light_bulb_drawer_label">Light Bulb Drawer</string>
    <string name="bean_light_bulb_drawer_description">Draws the light bulb</string>
    <string name="bean_skeleton_drawer_label">Skeleton Drawer</string>
    <string name="bean_skeleton_drawer_description">Draws the skeleton of the object</string>
    <string name="bean_skybox_drawer_label">SkyBox Decorator</string>
    <string name="bean_skybox_drawer_description">Draws a 3D Skybox as the scene background</string>
    <string name="bean_wireframe_drawer_label">Wireframe Drawer</string>
    <string name="bean_wireframe_drawer_description">Draws the wireframe of the models</string>
    <string name="bean_gui_label">GUI</string>
    <string name="bean_gui_drawer_label">Graphical User Interface</string>
    <string name="bean_anaglyph_renderer_label">Anaglyph Renderer</string>
    <string name="bean_default_renderer_label">Default Renderer</string>
    <string name="bean_stereoscopic_renderer_label">Stereoscopic Renderer</string>
    <string name="bean_shadow_drawer_description">Cast a shadow of the object in a plane on the ground</string>
    <string name="bean_shadow_drawer_label">Shadow Renderer</string>
    <string name="bean_shader_manager_label">Shader Manager</string>
    <string name="bean_shader_manager_description">Configuration of the OpenGL and Shaders version</string>

    <!-- Bean Properties -->
    <string name="property_settings_language_label">Language</string>
    <string name="property_settings_language_description">Application Language</string>
    <string name="property_settings_theme_label">Theme</string>
    <string name="property_settings_theme_description">Application Theme</string>
    <string name="property_gl_renderer_renderer_label">Active Renderer</string>
    <string name="property_gl_renderer_renderer_description">Select the renderer</string>
    <string name="property_gl_renderer_backgroundColor_label">Background Color</string>
    <string name="property_gl_renderer_backgroundColor_description">Select the default color for 3D models</string>
    <string name="property_skybox_drawer_skybox_label">SkyBox</string>
    <string name="property_skybox_drawer_skybox_description">Select the environment background</string>
    <string name="property_gui_drawer_enabled_description">Show or hide GUI</string>
    <string name="property_gui_drawer_showFPS_label">Frames Per Second</string>
    <string name="property_gui_drawer_showFPS_description">Show or hide FPS counter</string>
    <string name="property_shadow_drawer_enabled_description">Enable or disable shadows rendering</string>
    <string name="property_shader_manager_openGLVersion_label">OpenGL Version</string>
    <string name="property_shader_manager_openGLVersion_description">Select the OpenGL ES version for rendering and shaders</string>
    <string name="property_font_manager_factory_label">Font Factory</string>
    <string name="property_font_manager_factory_description">Select the font implementation for rendering text</string>

    <!-- Features -->
    <string name="feature_collision_description">Components that draw on top of the model</string>
    <string name="feature_decorator_description">Components that draw on top of the model</string>
    <string name="feature_gui_description">Display FPS, Axis and Info</string>
    <string name="feature_renderer_description">Core engine rendering</string>
</resources>
