<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_load"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_load" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_about" />

        <!--<item
            android:id="@+id/nav_demo2"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Glyphs Demo" />-->

    </group>

    <item
        android:id="@+id/nav_recent_wrapper"
        android:title="@string/menu_recent_models">
        <menu>
            <group android:id="@+id/group_recent" android:checkableBehavior="none" />
        </menu>
    </item>
</menu>